--- a/ege_game.html
+++ b/ege_game.html
@@ -32,6 +32,7 @@
             flex-direction: column;
             position: relative;
             overflow: hidden;
+            margin: 0 auto;
         }
 
         /* Верхняя панель навигации */
@@ -798,6 +799,7 @@
             position: relative;
             display: flex;
             flex-direction: column;
+            height: 100vh;
         }
 
         .russian-menu-header {
@@ -806,6 +808,7 @@
             background: rgba(0, 0, 0, 0.3);
             position: relative;
             z-index: 10;
+            flex-shrink: 0;
         }
 
         .russian-menu-header h1 {
@@ -818,37 +821,44 @@
             flex: 1;
             display: flex;
             position: relative;
-            padding: 20px 10px;
+            padding: 20px 5px;
             overflow: hidden;
+            min-height: 0;
+            align-items: center;
+            justify-content: space-between;
         }
 
         .side-buttons {
             display: flex;
             flex-direction: column;
-            gap: 15px;
-            width: 120px;
+            gap: 12px;
+            width: 115px;
             z-index: 5;
+            flex-shrink: 0;
+            justify-content: center;
+            max-height: 100%;
+            overflow-y: auto;
         }
 
         .side-buttons.left {
             align-items: flex-end;
-            padding-right: 10px;
+            padding-right: 5px;
         }
 
         .side-buttons.right {
             align-items: flex-start;
-            padding-left: 10px;
+            padding-left: 5px;
         }
 
         .side-btn {
             width: 110px;
-            padding: 15px 10px;
+            padding: 12px 8px;
             background: rgba(255, 255, 255, 0.15);
             backdrop-filter: blur(10px);
             border: 2px solid rgba(255, 255, 255, 0.2);
             border-radius: 15px;
             color: #fff;
-            font-size: 12px;
+            font-size: 11px;
             font-weight: bold;
             cursor: pointer;
             transition: all 0.3s ease;
@@ -858,6 +868,7 @@
             align-items: center;
             gap: 5px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            line-height: 1.3;
         }
 
         .side-btn:hover {
@@ -871,20 +882,24 @@
         }
 
         .center-path-area {
-            flex: 1;
+            flex: 0 0 90px;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             position: relative;
-            margin: 0 10px;
+            margin: 0 5px;
+            min-width: 90px;
+            max-width: 90px;
         }
 
         .center-path {
-            width: 80px;
-            height: 300px;
+            width: 70px;
+            height: 100%;
+            max-height: 350px;
+            min-height: 200px;
             background: linear-gradient(180deg, #4a5568 0%, #2d3748 100%);
-            border-radius: 40px;
+            border-radius: 35px;
             position: relative;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
         }
@@ -912,6 +927,8 @@
             padding: 20px;
             text-align: center;
             z-index: 10;
+            flex-shrink: 0;
+            background: rgba(0, 0, 0, 0.2);
         }
 
         .play-main-btn {
@@ -1004,7 +1021,11 @@
         }
 
         .screen.with-bottom-nav {
-            padding-bottom: 70px;
+            padding-bottom: 80px;
+        }
+
+        .russian-menu-screen.with-bottom-nav .play-button-container {
+            padding-bottom: 80px;
         }
 
 
@@ -1367,12 +1388,12 @@
             <div class="bottom-nav-item active" onclick="switchBottomNav('game')" data-nav="game">
                 <div class="bottom-nav-icon">🎮</div>
                 <div class="bottom-nav-text">Игра</div>
-            </div>
+                    </div>
             <div class="bottom-nav-item" onclick="switchBottomNav('settings')" data-nav="settings">
                 <div class="bottom-nav-icon">⚙️</div>
                 <div class="bottom-nav-text">Настройки</div>
+                </div>
             </div>
-        </div>
 
         <!-- Экран настроек -->
         <div class="screen settings-screen" id="settingsScreen">
@@ -1392,7 +1413,7 @@
                     <button class="settings-btn" onclick="exportProgress()">
                         💾 Экспорт прогресса
                     </button>
-            </div>
+                </div>
 
                 <div class="settings-section">
                     <h3>ℹ️ О приложении</h3>
@@ -1400,8 +1421,8 @@
                         ЕГЭ Аркада - интерактивная игра для подготовки к ЕГЭ по русскому языку.<br>
                         Проходите уровни, изучайте правила и улучшайте свои результаты!
                     </p>
-                </div>
             </div>
+        </div>
         </div>
 
     </div>
@@ -1819,6 +1840,7 @@
                 document.getElementById('settingsScreen').classList.add('with-bottom-nav');
                 updateSettingsStats();
             } else if (nav === 'game') {
+                // Возвращаемся в главное меню русского языка
                 document.getElementById('russianMenuScreen').classList.add('active');
                 document.getElementById('russianMenuScreen').classList.add('with-bottom-nav');
             }
@@ -1834,7 +1856,7 @@
             });
         }
 
-        // Переключение категории
+        // Переключение категории (из верхней панели в аркаде)
         function switchCategory(category) {
             currentCategory = category;
             updateNavbar();
@@ -1845,13 +1867,14 @@
             });
             
             if (category === 'settings') {
+                // Переход в настройки из аркады - возвращаемся в меню русского языка
                 document.getElementById('topNavbar').style.display = 'none';
                 document.getElementById('bottomNavbar').style.display = 'flex';
-                document.getElementById('settingsScreen').classList.add('active');
-                document.getElementById('settingsScreen').classList.add('with-bottom-nav');
-                updateBottomNav('settings');
-                updateSettingsStats();
+                document.getElementById('russianMenuScreen').classList.add('active');
+                document.getElementById('russianMenuScreen').classList.add('with-bottom-nav');
+                switchBottomNav('settings');
             } else {
+                // Остаемся в аркаде, просто меняем категорию
                 document.getElementById('levelSelectScreen').classList.add('active');
                 document.getElementById('levelSelectScreen').classList.add('with-navbar');
                 renderLevelSelect();
@@ -2434,6 +2457,5 @@
     </script>
 </body>
 </html>
-
 
 
